add config api
